better date input styles

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
                 </div> -->
                 <div id="min-date-box">
                     <div id="min-date-selection" class="invisible">
-                        <input type="number" id="min-date-input"></input>
+                        <input type="number" id="min-date-input" value="1776"></input>
                         <select name="era" id="min-era-select">
                             <option value="BC">BC</option>
                             <option value="AD">AD</option>
                         </select>
                         <div id="selection-box"></div>
                     </div>
-                    <p id="min-date">67</p><p id="min-era">BC</p>
+                    <p id="min-date">1776</p><p id="min-era">BC</p>
                 </div>
             </div>
             <div id="slider-container">
@@ -78,14 +78,14 @@
                 </div> -->
                 <div id="max-date-box">
                     <div id="max-date-selection" class="invisible">
-                        <input type="number" id="max-date-input"></input>
+                        <input type="number" id="max-date-input" value="2025"></input>
                         <select name="era" id="max-era-select">
                             <option value="BC">BC</option>
                             <option value="AD">AD</option>
                         </select>
                         <div id="selection-box"></div>
                     </div>
-                    <p id="max-date">67<p id="max-era">AD</p></p>
+                    <p id="max-date">2025<p id="max-era">AD</p></p>
                 </div>
             </div>
         </div>
