better loading screen when donwloading an image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 <img id="save-img" src="images/icons/save.png">
                 <h3 id="save-button">Save</h3>
                 <h3>Save As</h3>
-                <h3>Load</h3>
             </div>
             <div id="filter" class="nav-item">
                 <img id="filter-img" src="images/icons/filter.png">
@@ -96,6 +95,10 @@
                 <ol id="filters">
 
                 </ol>
+            </div>
+            <div id="loading-screen" class="invisible">
+                <div id="spinner"></div>
+                <p id="load-text">Loading...</p>
             </div>
         </div>
     </body>
