better slider year checking

--- a/index.html
+++ b/index.html
@@ -100,6 +100,16 @@
                 <div id="spinner"></div>
                 <p id="load-text">Loading...</p>
             </div>
+            <div id="save-img-select" class="invisible">
+                <div id="top">
+                    <h2>Download As</h2>
+                    <img id="close-button" src="images/icons/close.png">
+                </div>
+                <hr>
+                <ol id="filters">
+
+                </ol>
+            </div>
         </div>
     </body>
 </html>
