updated filters logic

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <div id="column-1">
                         <!-- labels and borders -->
                          <div id="labels" class="filter">
-                            <div class="filter-head">
+                            <div id="labels" class="filter-head head">
                                 <div class="centered-text">
                                     <h3>Labels</h3>
                                 </div>
@@ -132,7 +132,7 @@
                             </div>
                          </div>
                          <div id="borders" class="filter">
-                            <div class="filter-head">
+                            <div id="borders" class="filter-head head">
                                 <div class="centered-text">
                                     <h3>Borders</h3>
                                 </div>
@@ -153,19 +153,19 @@
                     </div>
                     <div id="column-2">
                         <!-- background, rivers, and battles -->
-                         <div id="background" class="filter">
+                         <div id="background" class="filter head">
                             <div class="centered-text">
                                 <h3>Background</h3>
                             </div>
                             <img id="background-img" src="./images/icons/background.svg">
                          </div>
-                         <div id="rivers" class="filter">
+                         <div id="rivers" class="filter head">
                             <div class="centered-text">
                                 <h3>Rivers</h3>
                             </div>
                             <img id="rivers-img" src="./images/icons/river.svg">
                          </div>
-                         <div id="battles" class="filter">
+                         <div id="battles" class="filter head">
                             <div id="battles-text" class="centered-text">
                             <h3>Battles</h3>
                             <h4>(experimental)</h4>
