--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>OHM Teacher/Student Interface</title>
+        <link rel="icon" type="image/svg+xml" href="images/icons/icon.svg">
+
         <link href="https://unpkg.com/maplibre-gl@5.0.0/dist/maplibre-gl.css" rel="stylesheet">
 <script src="https://unpkg.com/maplibre-gl@5.0.0/dist/maplibre-gl.js"></script>
         <script src="https://unpkg.com/@openhistoricalmap/maplibre-gl-dates@1.3.0/index.js"></script>
@@ -219,5 +221,6 @@
                 <li id="add-marker">Place Marker</li>
             </ol>
         </div>
+        <div id="query-display"></div>
     </body>
 </html>
