start of maker maps

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        
         <nav>
             <div id="logo" class="nav-item">
                 <img id="logo-img" src="images/icons/icon.svg"/>
@@ -29,10 +28,12 @@
             </div>
             <div id="filter" class="nav-item">
                 <img id="filter-img" src="images/icons/filter.svg">
-                <div id="scroll">
-                </div>
                 <h3 id="more-filters">More...</h3>
-
+            </div>
+            <div id="filter" class="nav-item">
+                <a href="maker.html">
+                    <h3 id="map-maker">Map Maker</h3>
+                </a>
             </div>
         </nav>
         <div id="map-controls">
